Getting ready to test.

--- a/dataloader_optimization.ipynb
+++ b/dataloader_optimization.ipynb
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 159,
+   "execution_count": 162,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -73,11 +73,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 160,
+   "execution_count": 166,
    "metadata": {},
    "outputs": [],
    "source": [
-    "f0s, audios, mels, seg_codes, embeds = sampler.process(wav, codes)"
+    "f0s, mels, seg_codes, embeds = sampler.process(wav, codes, 0.2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 164,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "torch.Size([621, 192])"
+      ]
+     },
+     "execution_count": 164,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "embeds.shape"
    ]
   },
   {
